--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page</title>
+    <title>Гусь</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>sadfsdfsd sdfsdfs s fsdfsd. Commodi fuga consequuntur quam eveniet sit laborum excepturi tempore beatae, amet sint perferendis quibusdam in velit, nesciunt animi, magni dolorem provident modi.</p>
+    <h2>Text</h2>
+    <p>asdasd  asdad asdasdas</p>
+    <h6>paragraf</h6>
+    <div class="block">
+        <div class="header"></div>
+    </div>
+
 </body>
 </html>
