--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>sadfsdfsd sdfsdfs s fsdfsd. Commodi fuga consequuntur quam eveniet sit laborum excepturi tempore beatae, amet sint perferendis quibusdam in velit, nesciunt animi, magni dolorem provident modi.</p>
-    <h2>Text</h2>
-    <p>asdasd  asdad asdasdas</p>
-    <h6>paragraf</h6>
-    <div class="block">
-        <div class="header"></div>
+    <div class="sidebar">
+        <div class="section">
+            <p class="color item">Главная</p>
+            <p class="color item">в тренде</p>
+            <p class="color item">подписка</p>
+        </div>
+        <div class="section">
+            <p class="color item">библиотека</p>
+            <p class="color item">история</p>
+            <p class="color item">ваши видео</p>
+            <p class="color item">смотреть позже</p>
+        </div>
     </div>
-
 </body>
 </html>
